--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,12 @@
 	<distributionManagement>
 		 <snapshotRepository>
 		    <id>nexus</id>
-		    <url>http://13.233.109.185:8081/repository/maven-snapshots/</url>
+		    <url>http:/13.233.109.185:8081/repository/maven-snapshots/</url>
 		 </snapshotRepository>
 		
 		<repository>
 		    <id>nexus</id>
-		    <url>http://13.233.109.185:8081/repository/maven-releases/</url>
+		    <url>http:/13.233.109.185:8081/repository/maven-releases/</url>
 		</repository>
   	</distributionManagement>
 	
